--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <main class="hero">
     <div class="hero-text">
-      <p class="tagline">BEST DESTINATIONS AROUND THE WORLD</p>
+      <!-- <p class="tagline">BEST DESTINATIONS AROUND THE WORLD</p> -->
       <h1>Travel, enjoy<br>and live a new<br><span>and full life</span></h1>
       <p class="description">
         Built Wicket longer admire do barton vanity itself do in it. Preferred to sportsmen it engrossed listening. Park gate sell they west hard for the.
